[FIX] marketing_automation: avoid @extend and fix misalignment
We can remove @extend because it seems that this no longer fix
anything even if the css rule "width: 100%" on .o_field_widget
is still there.

So in this commit, we found an effective fix by simply using w-*
to avoid the fields being one below the other.

Steps to reproduce:
- Go to Marketing Automation
- Click on "New"
- In the form view click on "Add new activity"
- See "Trigger" and "Cancel after" fields

closes odoo/enterprise#48920

Related: odoo/odoo#138615

--- a/marketing_automation/static/src/scss/marketing_automation.scss
+++ b/marketing_automation/static/src/scss/marketing_automation.scss
@@ -334,25 +334,6 @@
 }
 
 // ------------------------------------------------------------------
-// Marketing Activity Form
-// ------------------------------------------------------------------
-
-.o_marketing_activity_form.o_form_editable {
-    .o_group .o_field_widget {
-        // Force col-x classes to use their normal values
-        // Overrides '.o_form_view .o_group .o_field_widget' that sets the width to 100%
-
-        &.col-2 {
-            @extend .col-2;
-        }
-
-        &.col-10 {
-            @extend .col-10;
-        }
-    }
-}
-
-// ------------------------------------------------------------------
 // Colors
 // ------------------------------------------------------------------
 .o_ma_text_canceled {
